--- a/desayuno/desayuno.html
+++ b/desayuno/desayuno.html
@@ -6,7 +6,7 @@
 		<title>Restaurante el pescador</title>
 		
 		<meta name="description" content="Restaurante el pescador simplemente iresistible ubicado en santiago atitlan restaurante de alta gama"/>
-		<link rel="stylesheet" href="css/desayuno.css" />
+		<link rel="stylesheet" href="css/estilo.css" />
 		
 	</head>
 
@@ -15,14 +15,13 @@
 			<img class="logoimg" src="images/logo.png"></div>
 
  		<header>
- 			<h1>Almuerzo</h1>
+ 			<h1>desayuno</h1>
  			<NAV class="navegacion">
  				<li><a href="../index.html">home</a></li>
  				<li><a href="../menu.html">menu</a></li>
- 				<li><a href="bebidas.html">bebidas</a></li>
+ 				 <li><a href="almuerzo.html">almuerzo</a></li>
  				<li><a href="cena.html">cena</a></li>
- 				<li><a href="desayuno.html">desayuno</a></li>
-
+ 				<li><a href="bebidas.html">bebidas</a></li>
  			</NAV>
  		</header>
  		<div class ="img">
