--- a/desayuno/almuerzo.html
+++ b/desayuno/almuerzo.html
@@ -6,7 +6,7 @@
 		<title>Restaurante el pescador</title>
 		
 		<meta name="description" content="Restaurante el pescador simplemente iresistible ubicado en santiago atitlan restaurante de alta gama"/>
-		<link rel="stylesheet" href="css/desayuno.css" />
+		<link rel="stylesheet" href="css/estilo.css" />
 		
 	</head>
 
@@ -15,13 +15,13 @@
 			<img class="logoimg" src="images/logo.png"></div>
 
  		<header>
- 			<h1>Almuerzo</h1>
+ 			<h1>cena</h1>
  			<NAV class="navegacion">
- 				<li><a href="../index.html">home</a></li>
- 				<li><a href="../menu.html">menu</a></li>
- 				<li><a href="bebidas.html">bebidas</a></li>
- 				<li><a href="cena.html">cena</a></li>
- 				<li><a href="desayuno.html">desayuno</a></li>
+ 				<li><a href="../index.html">Home</a></li>
+ 				<li><a href="../menu.html">Menu</a></li>
+ 				<li><a href="desayuno.html">Desayuno</a></li>
+ 				<li><a href="cena.html">Cena</a></li>
+ 				<li><a href="bebidas.html">Bebidas</a></li>
 
  			</NAV>
  		</header>
@@ -30,6 +30,12 @@
  		</div>
  		<div class="inferior" >
  		</div>
+ 		<nav class="selector">
+ 			<MENU class="al" >MARISCOS</MENU>
+ 			<MENU class="al" >POLLO</MENU>
+ 			<MENU class="al" >CARNES</MENU>
+ 			<MENU class="al" >SANWICHES</MENU>
+ 		</nav>
 
 	</body>
 </html>
