--- a/desayuno/bebidas.html
+++ b/desayuno/bebidas.html
@@ -6,7 +6,7 @@
 		<title>Restaurante el pescador</title>
 		
 		<meta name="description" content="Restaurante el pescador simplemente iresistible ubicado en santiago atitlan restaurante de alta gama"/>
-		<link rel="stylesheet" href="css/desayuno.css" />
+		<link rel="stylesheet" href="css/estilo.css" />
 		
 	</head>
 
@@ -15,13 +15,13 @@
 			<img class="logoimg" src="images/logo.png"></div>
 
  		<header>
- 			<h1>Almuerzo</h1>
+ 			<h1>bebidas</h1>
  			<NAV class="navegacion">
  				<li><a href="../index.html">home</a></li>
  				<li><a href="../menu.html">menu</a></li>
- 				<li><a href="bebidas.html">bebidas</a></li>
- 				<li><a href="cena.html">cena</a></li>
  				<li><a href="desayuno.html">desayuno</a></li>
+ 				<li><a href="almuerzo.html">almuerzo</a></li>
+ 				<li><a href="cena.html">cena</a></li>
 
  			</NAV>
  		</header>
@@ -30,6 +30,13 @@
  		</div>
  		<div class="inferior" >
  		</div>
+ 		<nav class="selector">
+ 			<MENU class= "al" id ="bebidasfrias">BEBIDAS FRIAS  Y CALIENTES</MENU>
+ 			<MENU class= "al" id="bebidasalcoholicas">BEBIDAS ALCOHOLICAS</MENU>
+ 			<MENU class= "al">CERVEZA</MENU>
+ 			<MENU class= "al">VINOS</MENU>
+ 			<MENU class= "al">LICORES</MENU>
+ 		</nav>
 
 	</body>
 </html>
